# recommendation-systems-for-yelp

./: .env  .flake8  .gitignore  01_DataScrapper.ipynb  README.md  pyproject.toml
notebooks/: 01_DataWrangling.ipynb  01_EDA.ipynb  02_DataInsertion.ipynb  Model_Baseline.ipynb  Model_CF-vs-POP-vs-Rand.ipynb  Model_Memory_Based_CF.ipynb  Model_Model_Based_CF.ipynb
rec_sys/: __init__.py  datawrangler.py
rec_sys/data_scripts/: loader.py
