[tool.poetry]
name = "yelp-recco-system"
version = "0.1.0"
description = ""
authors = ["Biswas Nandamuri <biswas.bin2@gmail.com>"]
readme = "README.md"
packages = [{include = "rec_sys"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyspark = "^3.3.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
numba = "^0.56"
mlflow = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.22.0"
jupyterlab = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
