[tool.poetry]
name = "yelp-recco-system"
version = "0.1.0"
description = ""
authors = ["Biswas Nandamuri <biswas.bin2@gmail.com>"]
readme = "README.md"
packages = [{include = "rec_sys"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyspark = "^3.3.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
numba = "^0.56"
mlflow = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.22.0"
jupyterlab = "^3.6.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
